--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,62 @@
 body {
     text-align: center;
-    margin: 180px 300px 0;
+    margin: 100px;
+    background-color: beige;
 }
 
 h1 {
     font-size: 50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 p {
-    font-size: 32px;
-}
-
-li {
-    margin: 3px;
+    font-size: 28px;
 }
 
 .start-button {
     border-radius: 1rem;
 }
 
-.front-page {
+.view-scores {
+    font-size: 20px;
+    display: flex;
+}
+
+.enter-name {
     display:none;
+}
+
+.view-start {
+    display: none;
+    font-size: 20px;
 }
 
 .time {
     white-space: nowrap;
     text-align: right;
+    font-weight: bolder;
+    font-size: 30px;
+}
+
+.results {
+    display: flex;
+    font-weight: bold;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .time * {
     display: inline;
 }
 
-.answers {
-    font-size: 20px;
-    list-style-type: none;
-    text-align: left;
-    border: 2px solid black;
-    border-radius: 5px;
-    margin: 10px 300px;
-    background-color: purple;
-    color: white;
+.option-boxes * {
+    margin: 10px;
+    padding: 4px 30px;
+    border-radius: 1px;
 }
+
+.option-button {
+    font-size: 20px;
+}
+
 
